--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,8 +4,9 @@
 	    <title>{{title}}</title>
 	    {{{block "pageStyles"}}}
     </head>
-	<body>
+	<body class="yui3-skin-sam">
 	    {{{body}}}
 	    {{{block "pageScripts"}}}
+	    {{{block "pageInlineJS"}}}
 	</body>
 </html>
